--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
   </ul>
 </nav>
   <div class="envolvente">
+      <div class="imagen-decorativa">
+    <img src="channels4_profile.jpg" alt="Descripción académica">
+  </div>
+<div class="campo-icono">
+  <input type="text" aria-label="Buscar contenido">
+</div>
   <form action="">
   <div class="form-group">
     <label for="nombre">Nombre:</label>
@@ -44,7 +50,16 @@
   <p class="info">Todos los campos son obligatorios, excepto la opción de guardar datos.</p>
   <p class="info">La información será tratada conforme a las políticas de privacidad.</p>
 
+  <button class="btn-sombra">Más información</button>
+
+  <blockquote class="cita-academica">
+  La tecnología por sí sola no basta. También tenemos que poner el corazón.
+</blockquote>
+
   </form>
+  <div class="tarjeta">
+  <button class="btn-eliminar">✖</button>
+</div>
   </div>
 </body>
 </html>
