--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="modo-oscuro">
     <nav class="menu-principal">
   <ul>
     <li><a href="#inicio">Inicio</a></li>
@@ -15,6 +15,14 @@
     <li><a href="#acerca">Acerca de</a></li>
   </ul>
 </nav>
+<div class="card-centrada">
+  <h2>Tarjeta Informativa</h2>
+  <p>Mañana no hay clase jovenes.</p>
+</div>
+<div class="contenedor-cajas">
+  <div class="caja caja-roja">Caja Atras</div>
+  <div class="caja caja-verde">Caja Adelante</div>
+</div>
   <div class="envolvente">
       <div class="imagen-decorativa">
     <img src="channels4_profile.jpg" alt="Descripción académica">
@@ -59,6 +67,7 @@
   </form>
   <div class="tarjeta">
   <button class="btn-eliminar">✖</button>
+  <p>Esto es un texto.</p>
 </div>
   </div>
 </body>
