Intento de arreglar la pagina

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <!-- Tarjeta con botón eliminar -->
     <div class="tarjeta">
       <button type="button" class="btn-eliminar" aria-label="Eliminar">✖</button>
-      <p>Esto es un texto.</p>
+      <p>Esto es un texto largo.</p>
     </div>
   </section>
 
